--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Boats#index</h1>
-<p>Find me in app/views/boats/index.html.erb</p>
+<div class="container">
+  <% @boats_by_city.in_groups_of(3, false).each do |group| %>
+    <div class="row">
+    <% group.each do |boat| %>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card">
+          <h1><%= boat.name %></h1>
+          <p><%= boat.type %></p>
+          <p><%= boat.capacity %></p>
+        </div>
+      </div>
+    <% end %>
+    </div>
+
+  <% end %>
+</div>
