--- a/app/views/boats/new.html.erb
+++ b/app/views/boats/new.html.erb
@@ -10,8 +10,7 @@
     <%= f.label :capacity %>
     <%= f.text_field :capacity %>
 
-    <%= f.label :city %>
-    <%= f.text_field :city %>
+    <%= f.association :city %>
 
     <%= f.label :address %>
     <%= f.text_field :address %>
