finished boat form partial for new and edit

--- a/app/views/boats/edit.html.erb
+++ b/app/views/boats/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Boats#edit</h1>
-<p>Find me in app/views/boats/edit.html.erb</p>
+<div class="container">
+  <h1>Edit your Boat</h1>
+  <%= render 'form' %>
+</div>
+
