--- a/app/views/boats/new.html.erb
+++ b/app/views/boats/new.html.erb
@@ -1,20 +1,3 @@
 <div class="container">
-  <h2>Add a new boat</h2>
-  <%= simple_form_for(@boat) do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-
-    <%= f.label :type %>
-    <%= f.text_field :type %>
-
-    <%= f.label :capacity %>
-    <%= f.text_field :capacity %>
-
-    <%= f.association :city %>
-
-    <%= f.label :address %>
-    <%= f.text_field :address %>
-
-    <%= f.button :submit %>
-  <% end %>
+  <%= render 'form' %>
 </div>
