--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -5,7 +5,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card">
           <h1><%= boat.name %></h1>
-          <p><%= boat.type %></p>
+          <p><%= boat.category %></p>
           <p><%= boat.capacity %></p>
         </div>
       </div>
