--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,2 +1,26 @@
-<h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p>
+<div class="container">
+  <h1>Create a new booking</h1>
+  <div class="boat-info">
+    <ul>
+      <li><%= @booking.boat.name %></li>
+      <li><%= @booking.boat.capacity %></li>
+      <li><%= @booking.boat.category %></li>
+      <li><%= @booking.boat.city %></li>
+      <li><%= @booking.boat.address %></li>
+    </ul>
+
+  </div>
+  <div class="owner-info">
+    <ul>
+      <li><%= @booking.boat.user.name %></li>
+      <li><%= @booking.boat.user.bio %></li>
+      <li><%= image_tag @booking.boat.user.profile_img %></li>
+    </ul>
+  </div>
+  <div class="dates-and-price">
+    <%= render 'form' %>
+    <!-- use js to dynamically calculate price based on chosen dates -->
+    <h3>Price: <%= (@booking.check_out - @booking.check_in * @booking.price) %></h3>
+  </div>
+</div>
+
