finished clickable cards in search

--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -3,11 +3,13 @@
     <div class="row">
     <% group.each do |boat| %>
       <div class="col-xs-12 col-sm-6 col-md-4">
+        <%= link_to boat_path(boat) do %>
         <div class="card">
           <h1><%= boat.name %></h1>
           <p><%= boat.category %></p>
           <p><%= boat.capacity %></p>
         </div>
+        <% end %>
       </div>
     <% end %>
     </div>
