replaced first and last_names with kevins full_name

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="col-lg-3 col-md-4 hide-sm">
       <%= image_tag ("http://placehold.it/220x220") %>
-      <h4><%= @user.first_name + " " + @user.last_name %></h4>
+      <h4><%= @user.full_name %></h4>
 
     </div>
 
     <div class="col-lg-9 col-md-8 col-sm-12">
       <div class="user-bio">
-        <h2><%= @user.first_name + " " + @user.last_name %></h2>
+        <h2><%= @user.full_name %></h2>
         <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas iste beatae odit omnis minima sit perferendis nostrum, aspernatur enim laboriosam cum sed, soluta qui quis vero inventore corporis reprehenderit temporibus."</p>
       </div>
       <div class="user-listings">
