finished booking views

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
-  <h1>Create a new booking</h1>
+  <h1>Create Booking Request</h1>
   <div class="boat-info">
+    <h2>Boat:</h2>
+    <%= image_tag ("http://placehold.it/220x220") %>
     <ul>
-      <li><%= @booking.boat.name %></li>
+      <li><%= @booking.boat.full_name %></li>
       <li><%= @booking.boat.capacity %></li>
       <li><%= @booking.boat.category %></li>
       <li><%= @booking.boat.city %></li>
@@ -11,10 +13,11 @@
 
   </div>
   <div class="owner-info">
+    <h2>Host:</h2>
     <ul>
-      <li><%= @booking.boat.user.name %></li>
+      <li><%= @booking.boat.user.full_name %></li>
       <li><%= @booking.boat.user.bio %></li>
-      <li><%= image_tag @booking.boat.user.profile_img %></li>
+      <li><%= image_tag ("http://placehold.it/220x220") %></li>
     </ul>
   </div>
   <div class="dates-and-price">
@@ -23,4 +26,3 @@
     <h3>Price: <%= (@booking.check_out - @booking.check_in * @booking.price) %></h3>
   </div>
 </div>
-
