--- a/app/views/boats/_form.html.erb
+++ b/app/views/boats/_form.html.erb
@@ -14,5 +14,8 @@
   <%= f.label :address %>
   <%= f.text_field :address %>
 
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
+
   <%= f.button :submit %>
 <% end %>
