--- a/app/views/boats/_form.html.erb
+++ b/app/views/boats/_form.html.erb
@@ -3,13 +3,13 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
 
-  <%= f.label :category %>
-  <%= f.text_field :category %>
+  <%= f.input :category, priority: [ "Shrimp Boat" ], collection: ["Fishing Boat", "Sail Boat", "Canoe", "Speed Boat", "Yacht", "Houseboat", "Banana Boat", "Kayak", "Life Boat", "Pirate Ship", "Shrimp Boat", "Tug Boat"] %>
 
   <%= f.label :capacity %>
   <%= f.text_field :capacity %>
 
-  <%= f.association :city %>
+  <%= f.label :city %>
+  <%= f.text_field :city %>
 
   <%= f.label :address %>
   <%= f.text_field :address %>
