--- a/app/views/boats/_form.html.erb
+++ b/app/views/boats/_form.html.erb
@@ -3,10 +3,16 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
 
+  <%= f.label :description %>
+  <%= f.text_field :description %>
+
   <%= f.input :category, priority: [ "Shrimp Boat" ], collection: ["Fishing Boat", "Sail Boat", "Canoe", "Speed Boat", "Yacht", "Houseboat", "Banana Boat", "Kayak", "Life Boat", "Pirate Ship", "Shrimp Boat", "Tug Boat"] %>
 
   <%= f.label :capacity %>
   <%= f.text_field :capacity %>
+
+  <%= f.label :price %>
+  <%= f.text_field :price %>
 
   <%= f.label :city %>
   <%= f.text_field :city %>
@@ -15,7 +21,6 @@
   <%= f.text_field :address %>
 
   <%= f.input :photo %>
-  <%= f.input :photo_cache, as: :hidden %>
 
   <%= f.button :submit %>
 <% end %>
