changed the tabs and did the main foundation of the dashboard home

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,23 +1,63 @@
 <!-- USING BOOTSTRAP TABS! NOT LEWAGON TABS! -->
 <div>
-  <!-- Nav tabs -->
-  <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#dashboard" aria-controls="home" role="tab" data-toggle="tab">Dashboard</a></li>
-    <li role="presentation"><a href="#your-listings" aria-controls="profile" role="tab" data-toggle="tab">Your Listings</a></li>
-    <li role="presentation"><a href="#your-boats" aria-controls="messages" role="tab" data-toggle="tab">Your Boats</a></li>
-    <li role="presentation"><a href="#profile" aria-controls="settings" role="tab" data-toggle="tab">Profile</a></li>
-  </ul>
+  <div class="tab-container">
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs push" role="tablist">
+      <li role="presentation" class="active"><a href="#dashboard" aria-controls="home" role="tab" data-toggle="tab">Dashboard</a></li>
+      <li role="presentation"><a href="#your-listings" aria-controls="profile" role="tab" data-toggle="tab">Your Listings</a></li>
+      <li role="presentation"><a href="#your-boats" aria-controls="messages" role="tab" data-toggle="tab">Your Boats</a></li>
+      <li role="presentation"><a href="#profile" aria-controls="settings" role="tab" data-toggle="tab">Profile</a></li>
+    </ul>
+  </div>
 
   <!-- Tab panes -->
   <div class="tab-content">
 
-    <div role="tabpanel" class="tab-pane active" id="dashboard">
-      <h3><%= @user.full_name %></h3>
-      <p><%= link_to "View Profile", user_path(@user) %></p>
-      <p><%= link_to "Edit Profile", edit_user_path(@user) %></p>
-
 <!-- EVERYTHING SHOULD BE EDITED IN HERE FOR EACH TAB. ALL HTML CODE GOES IN HERE! -->
+    <div role="tabpanel" class="tab-pane active" id="dashboard">
+      <div class="dash">
+        <div class="container">
+          <div class="row">
+            <div class="dash-body col-md-3">
+              <div class="dash-section text-center">
+                <!-- ADD PICTURE HERE -->
+                <%= image_tag ("http://placehold.it/220x220") %>
+                <!-- ADD PICTURE HERE -->
+                <h3><%= @user.full_name %></h3>
+                <p><%= link_to "View Profile", user_path(@user) %></p>
+                <p><%= link_to "Edit Profile", edit_user_path(@user) %></p>
+              </div>
+              <div class="dash-section text-center">
+                <div class="panel-header">Verified Information</div>
+                <div class="panel-body">
+                  <ul class="list-unstyled">
+                    <li><a href="#"></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
 
+            <div class="dash-aside col-md-9">
+              <div class="dash-section">
+                <div class="panel-header" id="notification">
+                  Notification
+                </div>
+                <div class="panel-body">
+                  <p>Maybe can be a list of notifications</p>
+                </div>
+              </div>
+              <div class="dash-section">
+                <div class="panel-header" id="notification">
+                  Messages
+                </div>
+                <div class="panel-body">
+                  <p>You can see your notifications here</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div role="tabpanel" class="tab-pane" id="your-listings">
