--- a/app/assets/stylesheets/dashboard/dash.scss
+++ b/app/assets/stylesheets/dashboard/dash.scss
@@ -2,7 +2,7 @@
   margin: 25px 0;
 }
 .dash-body {
-  padding: 0;
+  padding: 0 12.5px;
   p {
     font-size: 14px;
   }
@@ -12,7 +12,7 @@
   margin-bottom: 24px;
 }
 .dash-aside {
-  padding-left: 25px;
+  padding: 0 12.5px;
 }
 #notification {
   padding: 10px 0 10px 25px;
