added new colors to variables

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -32,3 +32,8 @@ $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
+$pastel-blue: #A2C6CF;
+$platinum: #DEE3E6;
+$payne-grey: #546A76;
+$sea-serpent: #59C3C3;
+$sunset-orange: #F05D5E;
