--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <% @boats_by_city.in_groups_of(3, false).each do |group| %>
+  <% @boats.in_groups_of(3, false).each do |group| %>
     <div class="row">
     <% group.each do |boat| %>
       <div class="col-xs-12 col-sm-6 col-md-4">
