--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -3,8 +3,11 @@
  * ------------------------------------- */
 // Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-$base-font: "Open Sans", "Helvetica", "sans-serif";
-$header-font: "Raleway", "Helvetica", "sans-serif";
+@import url("https://fonts.googleapis.com/css?family=Barrio|Lato:300,400,700");
+$base-font: 'Lato', sans-serif;
+$header-font: 'Barrio', cursive;
+
+
 
 // Local fonts (uncomment following lines)
 // @font-face {
