--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,15 +2,15 @@
   <div class="banner-content">
     <h1>AHOY CAP'N</h1>
     <h3>where's the next destination?</h3>
-    <div class="form-inline">
-      <%= simple_form_for @boat, url: boats_path, method: :get do |f| %>
-        <%= f.input :city, placeholder: "anywhere" %>
-        <%= f.input :category, priority: [ "Shrimp Boat" ], collection: ["Fishing Boat", "Sail Boat", "Canoe", "Speed Boat", "Yacht", "Houseboat", "Banana Boat", "Kayak", "Life Boat", "Pirate Ship", "Shrimp Boat", "Tug Boat"] %>
-        <%= f.button :submit, 'search',  class: "btn btn-primary"  %>
-      <% end %>
-
+    <div class="search-bar">
+      <div class="form-inline">
+        <%= simple_form_for @boat, url: boats_path, method: :get do |f| %>
+          <%= f.input :city, placeholder: "anywhere" %>
+          <%= f.input :category, priority: [ "Shrimp Boat" ], collection: ["Fishing Boat", "Sail Boat", "Canoe", "Speed Boat", "Yacht", "Houseboat", "Banana Boat", "Kayak", "Life Boat", "Pirate Ship", "Shrimp Boat", "Tug Boat"] %>
+          <%= f.button :submit, 'search',  class: "btn btn-primary"  %>
+        <% end %>
+      </div>
     </div>
-
   </div>
 </div>
 
