--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,15 +1,20 @@
 /* Main class */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background-color: white;
   transition: all 0.3s ease;
   display: flex;
   height: 70px;
   padding: 0px 30px;
   align-items: center;
   justify-content: space-between;
+
 }
 
+.navbar-wagon a {
+  text-decoration: none;
+  color: $payne-grey;
+}
 /* Optional class to fix the navbar on top */
 .navbar-wagon-fixed {
   position: fixed;
@@ -49,7 +54,7 @@
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: $sunset-orange;
   text-decoration: none;
 }
 
@@ -80,7 +85,7 @@
 }
 .navbar-wagon-search-btn {
   line-height: 40px;
-  color: #E6E6E6;
+  color: $payne-grey;
   border: none;
   background: transparent;
   position: absolute;
@@ -90,18 +95,20 @@
 }
 .navbar-wagon-search-input {
   flex: 0 1 300px;
+  background-color: $platinum;
   transition: all 0.15s ease;
   line-height: 40px;
   font-weight: lighter;
-  color: #666666;
-  border: 1px solid #E6E6E6;
-  border-radius: 5px;
+  color: $payne-grey;
+  border: none;
+  border-radius: 4px;
   padding: 0 10px;
   font-size: 14px;
   outline: none;
+
 }
 .navbar-wagon-search-input:focus  {
-  border: 1px solid #CCCCCC;
+  opacity: 0.8;
 }
 
 /* Navbar dropdown menu */
