--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Logo -->
   <div class="navbar-left">
     <a href="/" class="navbar-wagon-brand">
-    <img src="https://cdn2.iconfinder.com/data/icons/large-svg-icons-part-3/512/anchor_gestureworks_basic-512.png" />
+    <%= image_tag "seabnblogo.png" %>
   </a>
   <!-- Search -->
   <form action="" class="navbar-wagon-search">
