--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -2,10 +2,14 @@
   <% if @boats.length == 0 %>
     <h2>No Search Results</h2>
   <% else %>
-    <% @boats.in_groups_of(3, false).each do |group| %>
+    <div class="fixed-map">
+    <%= render 'map' %>
+    </div>
+    <div class="cards">
+    <% @boats.in_groups_of(2, false).each do |group| %>
       <div class="row">
       <% group.each do |boat| %>
-        <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <%= link_to boat_path(boat) do %>
           <div class="card">
             <h1><%= boat.name %></h1>
@@ -13,9 +17,12 @@
             <p><%= boat.capacity %></p>
           </div>
           <% end %>
+
         </div>
       <% end %>
       </div>
+      <% end %>
     <% end %>
-  <% end %>
+    </div>
+
 </div>
