--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,7 +12,7 @@
         </ul>
       </div>
       <div class="col-xs-8 text-right">
-        <p>PROTOTYPE</p>
+        <p>©seabnb</p>
       </div>
     </div>
   </div>
