--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -31,7 +31,7 @@
         <td>"TOTAL PRICE"</td>
       </tr>
       <tr>
-        <td><%= link_to 'book now', new_booking_path, class: 'btn' %></td>
+        <td><%= link_to 'book now', new_boat_booking_path(@boat), class: 'btn' %></td>
       </tr>
     </tbody>
   </table>
