--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -7,7 +7,12 @@
       <% group.each do |boat| %>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <%= link_to boat_path(boat) do %>
-          <div class="card">
+          <% if !boat.photo %>
+          <% image_path = cl_image_path boat.photo %>
+          <% else %>
+          <% image_path = image_path "sailboat" %>
+          <% end %>
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path %>');">
             <h1><%= boat.name %></h1>
             <p><%= boat.category %></p>
             <p><%= boat.capacity %></p>
@@ -19,3 +24,4 @@
     <% end %>
   <% end %>
 </div>
+<br>
