--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -38,7 +38,7 @@
               <td><strong>TOTAL</strong> $<%= @boat.price * 8 %></td>
             </tr>
             <tr>
-              <td><%= link_to 'book now', new_booking_path, class: 'btn btn-book' %></td>
+              <td><%= link_to 'book now', new_boat_booking_path, class: 'btn btn-book' %></td>
             </tr>
           </tbody>
 
