--- a/app/assets/stylesheets/pages/_boat_show.scss
+++ b/app/assets/stylesheets/pages/_boat_show.scss
@@ -1,6 +1,3 @@
-.boat-container {
-  padding: 30px 0;
-}
 
 .boat-container h2 {
   margin-top: 0px;
@@ -19,12 +16,16 @@
 }
 
 .btn-book {
-  background-color: $sunset-orange;
+  background-color: $sunset-orange !important;
   padding: 6px 10px;
   border-radius: 4px;
   color: white;
   font-weight: bold;
   margin-bottom: 20px;
+}
+
+.btn-book:hover{
+  opacity: 0.85;
 }
 
 .test-table {
