--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,18 +1,33 @@
-html {
-    position: relative;
-    min-height: 100%;
+// html {
+//     position: relative;
+//     height: auto;
+//     min-height: 100%;
+// }
+
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
+.all-content {
+  flex: 1;
+}
 #footer-black {
   background-color: $payne-grey;
   padding: 30px 0;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  overflow:hidden;
-
+  // position: absolute;
+  // left: 0;
+  // bottom: 0;
+  // width: 100%;
+  // overflow:hidden;
+  // height: 95px;
+  // margin-bottom: -95px;
 }
+
+
+
+
 #footer-black a {
   font-size: 25px;
   padding: 0 15px;
@@ -31,4 +46,6 @@ html {
 #footer-black a:hover {
   opacity: 0.8;
 }
+
+
 
