--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -18,3 +18,19 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+.avatar-large-bordered {
+  width: 50px;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
+}
+.boat-background {
+  background-size: cover !important;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 220px;
+}
+.avatar-position {
+  top: 180px;
+  left: 156.5px;
+}
