--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -5,8 +5,9 @@
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
   display: flex;
-  align-items: center;
+  // align-items: center;
   justify-content: center;
+  position: relative;
 }
 .banner h1 {
   font-size: 100px;
@@ -28,4 +29,12 @@
   font-weight: lighter;
   letter-spacing: 2px;
   margin-top: 5px;
+}
+
+.banner-content {
+  margin-top: 55px;
+}
+
+.search-bar {
+  margin-top: 250px;
 }
