--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,12 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.45) 0%, rgba(0,36,61,0.45) 50%), url('https://unsplash.it/1024/600')">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.45) 0%, rgba(0,36,61,0.45) 50%), url('<%= asset_path('boat7.jpg') %>')">
   <div class="banner-content">
     <h1>AHOY CAP'N</h1>
     <h3>where's the next destination?</h3>
     <div class="search-bar">
       <div class="form-inline">
         <%= simple_form_for @boat, url: boats_path, method: :get do |f| %>
-          <%= f.input :address %>
-          <%= f.input :category, priority: [ "Shrimp Boat" ], collection: ["Fishing Boat", "Sail Boat", "Canoe", "Speed Boat", "Yacht", "Houseboat", "Banana Boat", "Kayak", "Life Boat", "Pirate Ship", "Shrimp Boat", "Tug Boat"] %>
+          <%= f.input :address, required: false %>
+          <%= f.input :category, priority: [ "Shrimp Boat" ], collection: ["Fishing Boat", "Sail Boat", "Canoe", "Speed Boat", "Yacht", "Houseboat", "Banana Boat", "Kayak", "Life Boat", "Pirate Ship", "Shrimp Boat", "Tug Boat"], required: false  %>
           <%= f.button :submit, 'search',  class: "btn btn-primary"  %>
         <% end %>
        </div>
